--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "babel-jest": "^27.0.1",
     "eslint": "^8.3.0",
     "gh-pages": "^3.2.0",
     "jest": "^27.0.1",
-    "serve": "^13.0.2"
+    "serve": "^14.2.1"
   },
   "engines": {
     "node": ">=16.x"
